@@ -9,6 +9,7 @@ import com.ibm.research.drl.dpt.providers.ProviderType;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.regex.Pattern;
 
 public class POBOXIdentifier extends AbstractRegexBasedIdentifier {
@@ -17,7 +18,7 @@ public class POBOXIdentifier extends AbstractRegexBasedIdentifier {
 
     @Override
     protected Collection<Pattern> getPatterns() {
-        return Arrays.asList(POBOX);
+        return List.of(POBOX);
     }
 
     @Override
